--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,9 @@
 	<section class="test-section">
 		<div class="container">
 			<div class="row">
+				<div class="col-lg-12">
+					<h1>fdgdfg</h1>
+				</div>
 			</div>
 		</div>
 	</section>
