installed bourbon and font-face generator

--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<title>New Site</title>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1"> 
+	<meta name="description" content="description">
+	<meta name="author" content="author">
+	<meta property="og:url"                content="url" />
+	<meta property="og:type"               content="website" />
+	<meta property="og:title"              content="" />
+	<meta property="og:description"        content="" />
+	<meta property="og:image"              content="" />
+	<meta property="og:image"              content="" />
+	<meta property="og:image"              content="" />
 	<!-- build:css css/vendor.css -->
 	<!-- bower:css -->
 	<link rel="stylesheet" href="bower_components/tooltipster/css/tooltipster.css" />
@@ -11,19 +21,12 @@
 	<!-- endbower -->
 	<!-- endbuild -->
 	<!-- build:css css/main.css -->
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.png">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/fonts.css">
 	<!-- endbuild -->
 </head>
 <body>
-	<section class="test-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<h1>fdgdfg</h1>
-				</div>
-			</div>
-		</div>
-	</section>
 	<!-- build:js js/vendor.js -->
 	<!-- bower:js -->
 	<script src="bower_components/jquery/dist/jquery.js"></script>
