react, webpack, es6 support added

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
 	<!-- endbuild -->
 </head>
 <body>
+	<div id="root"></div>
 	<!-- build:js js/vendor.js -->
 	<!-- bower:js -->
 	<script src="bower_components/jquery/dist/jquery.js"></script>
@@ -36,6 +37,7 @@
 	<!-- endbuild -->
 	<!-- build:js js/main.js -->
 	<script src="js/main.js"></script>
+	<script src="bundle.js"></script>
 	<!-- endbuild -->
 </body>
 </html>
